# group4_rwa5

./: CMakeLists.txt  CMakePresets.json  README.md
department/include/: Date.hpp  IDBadge.hpp  Manager.hpp
department/src/: Date.cpp  IDBadge.cpp  Manager.cpp
group4_rwa5/: CMakeLists.txt  package.xml
group4_rwa5/include/group4_rwa5/: waypoint_reacher.hpp
group4_rwa5/src/: main.cpp  waypoint_reacher.cpp
ros702_ws/src/bot_waypoint_msgs/: CMakeLists.txt  package.xml
ros702_ws/src/bot_waypoint_msgs/msg/: BotWaypoint.msg
